# atmospheric-turbulence-mitigation

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
src/atmospheric_turbulence_mitigation/: registration.py
tests/: test_registration.py
